--- a/main.css
+++ b/main.css
@@ -9,6 +9,11 @@
   margin-right: auto;
 }
 
+.jumbotron-image {
+  max-height: 100%;
+    max-width: 100%;
+}
+
 .center-scale {
   display: block;
   margin-left: auto;
@@ -40,6 +45,7 @@
   border-radius: 50%;
   margin-left: 0.75em;
 }
+
 .bottom-arrow:after {
   content: '';
 	display: inline-block;
